--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,12 @@ dependencies {
     compile('commons-io:commons-io:2.6')
     compile 'org.apache.httpcomponents:httpclient:4.5.10'
     implementation 'com.google.code.gson:gson:2.8.5'
-    compile "ch.qos.logback:logback-classic:1.2.3"
-    compile "ch.qos.logback:logback-core:1.2.3"
     compile "org.slf4j:slf4j-api:1.7.28"
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
     testImplementation('org.assertj:assertj-core:3.13.2')
+    compile 'ch.qos.logback:logback-classic:1.2.3'
+    testCompile 'ch.qos.logback:logback-classic:1.2.3'
 }
 
 test {
