Use npm for dependencies

--- a/site/_config.yml
+++ b/site/_config.yml
@@ -26,17 +26,23 @@ theme: minima
 plugins:
   - jekyll-gallery-generator
 
+sass:
+  load_paths:
+    - _sass
+    - node_modules
+  style: compressed
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
+exclude:
+   - Gemfile
+   - Gemfile.lock
 #   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+   - vendor/bundle/
+   - vendor/cache/
+   - vendor/gems/
+   - vendor/ruby/
 
 gallery:
   dir: photos               # Path to the gallery
