--- a/site/Dockerfile
+++ b/site/Dockerfile
@@ -1,6 +1,6 @@
 FROM ruby:2.5-alpine as jekyll-base
 
-RUN apk add --no-cache build-base gcc bash cmake git
+RUN apk add --no-cache build-base gcc bash cmake git nodejs-npm
 
 #RUN gem update --system
 
