--- a/site/Gemfile
+++ b/site/Gemfile
@@ -1,6 +1,5 @@
 source "http://rubygems.org"
 
-gem 'github-pages', group: :jekyll_plugins
 # Hello! This is where you manage which Jekyll version is used to run.
 # When you want to use a different version, change it below, save the
 # file and run `bundle install`. Run Jekyll with `bundle exec`, like so:
@@ -21,8 +20,7 @@ gem "minima", "~> 2.0"
 
 # If you have any plugins, put them here!
 group :jekyll_plugins do
-  gem "jekyll-feed", "~> 0.6"
-  gem "jekyll-gallery-generator"
+  gem 'jekyll-gallery-generator', '~> 1.2', '>= 1.2.2'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
