--- a/site/package.json
+++ b/site/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.4.1",
+    "jquery-mousewheel": "^3.1.13",
     "lg-autoplay": "^1.0.4",
     "lg-fullscreen": "^1.1.0",
     "lg-hash": "^1.0.4",
