--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 }
 
 dependencies {
+    compile 'joda-time:joda-time:2.10.3'
     compile 'io.github.cdimascio:java-dotenv:5.1.1'
     compileOnly 'org.projectlombok:lombok:1.18.10'
     annotationProcessor 'org.projectlombok:lombok:1.18.10'
