--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,10 +13,6 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: sgjscraper
-description: >- # this means to ignore newlines until "baseurl:"
-  SGJ Scraper.
-
 repository: one1on/sgj-scraper
 
 # Build settings
@@ -25,6 +21,7 @@ theme: jekyll-theme-cayman
 
 plugins:
   - jekyll-feed
+  - jekyll-github-metadata
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
