--- a/site/package.json
+++ b/site/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "foundation-sites": "^6.5.3",
     "jquery": "^3.4.1",
     "jquery-mousewheel": "^3.1.13",
     "lg-autoplay": "^1.0.4",
