--- a/site/Dockerfile
+++ b/site/Dockerfile
@@ -1,6 +1,6 @@
 FROM ruby:2.5-alpine as jekyll-base
 
-RUN apk add --no-cache build-base gcc bash cmake git nodejs-npm
+RUN apk add --no-cache build-base gcc bash cmake git nodejs-npm dos2unix
 
 #RUN gem update --system
 
@@ -10,7 +10,7 @@ RUN echo 'http://dl-cdn.alpinelinux.org/alpine/v3.5/main' >> /etc/apk/repositori
 RUN apk add --no-cache imagemagick-dev=6.9.6.8-r1
 RUN gem install rmagick
 
-EXPOSE 4000
+EXPOSE 8000
 
 WORKDIR /site
 
@@ -30,8 +30,9 @@ ENV JEKYLL_ENV development
 ENV BUNDLE_PATH /bundlercache
 
 COPY docker-entrypoint.sh /usr/local/bin/
+RUN dos2unix /usr/local/bin/docker-entrypoint.sh
 
 # on every container start we'l'
 ENTRYPOINT [ "docker-entrypoint.sh" ]
 
-CMD [ "bundle", "exec", "jekyll", "serve", "--watch", "--force_polling", "-H", "0.0.0.0", "-P", "4000" ]
+CMD [ "bundle", "exec", "jekyll", "serve", "--incremental", "--watch", "--force_polling", "-H", "0.0.0.0", "-P", "8000" ]
