Use build/images as shared src for photos

--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,6 @@
 # Your SGJ token
 SGJ_TOKEN=
-# A location for the downloads. I prefer an encrypted virtual drive
+# (optional) A location for the downloads. I prefer an encrypted virtual drive
 IMG_LOCATION=
 # (optional) Set a hashtag to subscribe to. Should be left empty after subscribtion. Subscribtion can be done on SGJ directly too.
 HASHTAG_SUBSCRIBE=
