--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,6 +4,7 @@ jobs:
   assemble:
     runs-on: ubuntu-latest
     steps:
+      - run: chmod +x gradlew
       - uses: actions/checkout@v1
       - name: Set up JDK 11
         uses: actions/setup-java@v1
@@ -15,6 +16,7 @@ jobs:
     needs: assemble
     runs-on: ubuntu-latest
     steps:
+      - run: chmod +x gradlew
       - uses: actions/checkout@v1
       - name: Set up JDK 11
         uses: actions/setup-java@v1
