--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,9 +4,7 @@ jobs:
   assemble:
     runs-on: ubuntu-latest
     steps:
-      - run: ls
-      - run: dos2unix gradlew
-      - run: chmod +x gradlew
+      - run: chmod +x ./gradlew
       - uses: actions/checkout@v1
       - name: Set up JDK 11
         uses: actions/setup-java@v1
