--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,8 +4,8 @@ jobs:
   assemble:
     runs-on: ubuntu-latest
     steps:
-      - run: chmod +x ./gradlew
       - uses: actions/checkout@v1
+      - run: chmod +x gradlew
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
