--- a/site/Gemfile
+++ b/site/Gemfile
@@ -9,7 +9,8 @@ source "https://rubygems.org"
 # This will help ensure the proper Jekyll version is running.
 # Happy Jekylling!
 
-gem "jekyll", "~> 3.8.5"
+gem "jekyll", "~> 4.0.0"
+gem "liquid-c"
 
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
 gem "minima", "~> 2.0"
@@ -21,6 +22,8 @@ gem "minima", "~> 2.0"
 # If you have any plugins, put them here!
 group :jekyll_plugins do
   gem 'jekyll-gallery-generator', '~> 1.2', '>= 1.2.2'
+  gem 'jekyll-feed', '~> 0.12.1'
+  gem "jekyll-include-cache"
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
