--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,4 +23,4 @@ jobs:
         with:
           java-version: 11
       - name: Execute unit tests
-        run: ./gradlew test --stacktrace
+        run: ./gradlew test
