--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -6,6 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - run: chmod +x gradlew
+      - run: cp .env.dist .env
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -18,6 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - run: chmod +x gradlew
+      - run: cp .env.dist .env
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
